# perf-sandbox

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: front-ci.yml
back/: .cursorignore  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.api.yml  docker-compose.db.yml  docker-compose.yml  pyproject.toml  run.sh
back/src/: config.py  database.py  main.py  models.py  openrouter_client.py  package.json  pug_renderer.py  schemas.py  server.js  template_transpile.py
back/src/routers/: experiments.py  render.py  templates.py
back/tests/: conftest.py  test_api.py  test_render.py  test_templates.py
front/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
front/.husky/: pre-commit
front/src/: App.tsx  index.html  index.js  main.tsx  package.json  theme.ts
front/src/assets/: index.ts
front/src/components/Header/: Header.module.css  Header.tsx
front/src/components/layout/: Layout.module.css  Layout.tsx
front/src/config/: constants.ts  env.ts  router.tsx  routes.ts
front/src/hooks/: useExperiments.ts
front/src/lib/: heatmap.ts  measure.ts  parse-key-value.ts  template-runners.ts
front/src/pages/experiment/: ExperimentPage.tsx  index.ts
front/src/pages/not-found/: NotFoundPage.tsx
front/src/pages/results/: Heatmap.tsx  ResultsPage.tsx  index.ts
front/src/pages/sandbox/: GenerateFlowModals.tsx  SandboxPage.module.css  SandboxPage.tsx  index.ts
front/src/services/: api-client.ts  api-types.ts  backend-types.ts  experiments-service.ts  index.ts  render-service.ts  templates-service.ts
front/src/styles/: index.css  variables.css
prompts/: 1.txt
